placeholder vertical align ios fix;

--- a/src/common/styles/common.scss
+++ b/src/common/styles/common.scss
@@ -886,6 +886,7 @@ p {
           background: none;
           outline: none;
           color: inherit;
+          line-height: normal;
         }
       }
 
